# PfTerminal

./: .gitignore  README.md  mkdocs.yml
.github/scripts/: build-codex-package-archive.sh
.github/workflows/: README.md  bazel.yml  ci.yml  pfterminal-ci.yml  pfterminal-macos-release.yml  pfterminal-release.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  sdk.yml  v8-canary.yml
codex-rs/: Cargo.toml  default.nix
codex-rs/cli/: Cargo.toml
codex-rs/core/: config.schema.json  gpt_5_2_prompt.md
codex-rs/docs/: unified_tps.md
codex-rs/login/: Cargo.toml
codex-rs/models-manager/: models.json  prompt.md
codex-rs/tui/: Cargo.toml  tooltips.txt
codex-rs/vault/: BUILD.bazel  Cargo.toml
codex-rs/vault/src/: lib.rs  tests.rs
docs/: authentication.md  ci.md  config.md  example-config.md  getting-started.md  index.md  install.md  license.md  nazgul_spec.md  pfterminal-spec.md
docs/current-sprint/: agent-vault-access.md  authentication.md  claude-code-integration-completion-spec.md  claude-headless-panes.md  codex-account-login.md  glm-52-tool-compatibility.md  hammer-reduction-process.md  index.md  native-provider-performance.md  spawn-orchestration-acceptance.md  spawn-orchestration.md  subagents.md
docs/integrations/: ambient.md  codex-fork.md  index.md  vercel.md  zai-glm-52.md
scripts/: docs-site-basic-auth-server  docs-site-build  docs-site-serve  glm-cache-live-probe  native-provider-tui-benchmark  spawn-report-verify.py  test_spawn_report_verify.py
scripts/codex_package/: README.md  (+5 more)
(+309 files in other folders)
