[package]
name = "codex-vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codex-keyring-store = { workspace = true }
codex-secrets = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
codex-keyring-store = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
